Finished with icons

--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,7 @@
   <div id="testimonials" class="page-section page-section__testimonials page-section__no-b-padding-untill-large">
     <div class="wrapper wrapper__no-padding-until-large">
         
-        <h2 class="section-title section-title__blue"><span class="feature-item__icon icon icon__comment"></span> Real <strong>Testimonials</strong></h2>
+        <h2 class="section-title section-title__blue"><span class="section-title__icon icon icon__comment"></span> Real <strong>Testimonials</strong></h2>
 
         <div class="row row__gutters row__equal-height-at-large row__gutters-small row__t-padding generic-content-container">
           <div class="row__large-4">
