--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel, added">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
   <link rel="stylesheet" href="temp/styles/styles.css">
+  <script src="temp/scripts/Vendor.js"></script>
 </head>
 <body>
   <header class="site-header">
@@ -56,14 +57,14 @@
       <h2 class="headline headline__centered headline__light headlin__b_margin_small">The first trip we planned <strong>was our own.</strong></h2>
       <h3 class="headline headline__centered headline__orange headline__small headline__narrow headline__light headline__b_margin_large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
       <div class="wrapper wrapper__medium wrapper__b-margin">
-        <img sizes="(min-width:970px) 976px, 100vwв" srcset="assets/images/first-trip-low-res-i.jpg 565w, assets/images/first-trip-i.jpg 976w,assets/images/first-trip-hi-dpi-i.jpg 1952w" alt="Couple walking down a street.">
+        <img class="lazyload" sizes="(min-width:970px) 976px, 100vwв" data-srcset="assets/images/first-trip-low-res-i.jpg 565w, assets/images/first-trip-i.jpg 976w,assets/images/first-trip-hi-dpi-i.jpg 1952w" alt="Couple walking down a street.">
       </div>
       <div class="row row__gutters">
         <div class="row__medium-4 row__medium-4__larger row__b-margin-until-medium">
           <picture>
-            <source sizes="404px" srcset="assets/images/our-start-i.jpg 404w,assets/images/our-start-hi-dpi-i.jpg 808w" media="(min-width:1020px)">
-            <source  sizes="320px" srcset="assets/images/our-start-portrait-i.jpg 382w, assets/images/our-start-portrait-hi-dpi-i.jpg 764w" media="(min-width:800px)">
-            <img srcset="assets/images/our-start-landscape-i.jpg 808w, assets/images/our-start-landscape-hi-dpi-i.jpg 1600w" alt="Our founder pretentious looking dudess">
+            <source sizes="404px" data-srcset="assets/images/our-start-i.jpg 404w,assets/images/our-start-hi-dpi-i.jpg 808w" media="(min-width:1020px)">
+            <source  sizes="320px" data-srcset="assets/images/our-start-portrait-i.jpg 382w, assets/images/our-start-portrait-hi-dpi-i.jpg 764w" media="(min-width:800px)">
+            <img class="lazyload"  data-srcset="assets/images/our-start-landscape-i.jpg 808w, assets/images/our-start-landscape-hi-dpi-i.jpg 1600w" alt="Our founder pretentious looking dudess">
           </picture>
         </div>
         <div class="row__medium-8 row__medium-8__smaller">
@@ -115,7 +116,7 @@
     </div>
   </div>
 
-  <div id="testimonials" class="page-section page-section__testimonials page-section__no-b-padding-untill-large" data-matching-link = "#testimonials-link">
+  <div id="testimonials" class="page-section page-section__testimonials page-section__no-b-padding-untill-large lazyload" data-matching-link = "#testimonials-link">
     <div class="wrapper wrapper__no-padding-until-large" >
         
         <h2 class="section-title section-title__blue"><span class="section-title__icon icon icon__comment"></span> Real <strong>Testimonials</strong></h2>
@@ -124,7 +125,7 @@
           <div class="row__large-4">
             <div class="testimonial">
               <div class="testimonial__photo">
-                <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+                <img class="lazyload"  sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
               </div>
               <h3  class="testimonial__title">Jane Doe</h3>
               <h4 class="testimonial__subtitle">9 Time Escaper</h3>
@@ -134,7 +135,7 @@
           <div class="row__large-4">
             <div class="testimonial">
               <div class="testimonial__photo">
-                  <img sizes="160px"  srcset="assets/images/testimonial-john.jpg 160w,assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+                  <img class="lazyload" sizes="160px"  data-srcset="assets/images/testimonial-john.jpg 160w,assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
               </div>
               <h3 class="testimonial__title">John Smith</h3>
               <h4 class="testimonial__subtitle">4 Time Escaper</h3>
@@ -145,7 +146,7 @@
           <div class="row__large-4">
             <div class="testimonial testimonial__last">
               <div class="testimonial__photo">
-                  <img sizes="160px"  srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w">
+                  <img class="lazyload"  sizes="160px"   data-srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w">
               </div>                
               <h3 class="testimonial__title">Cat McKitty</h3>
               <h4 class="testimonial__subtitle">6 Time Escaper</h3>
